whitespace fix

--- a/src/styles/Skills.module.css
+++ b/src/styles/Skills.module.css
@@ -12,7 +12,7 @@
     position: absolute;
     width: 100%;
     height: 40%;
-    top: 0;
+    top: -1px;
     background-color: var(--lush-green);
     z-index: -1;
     clip-path: polygon(0 0, 100% 0, 100% 60%, 50% 100%, 0 60%);
